  * User-editable
  * Customizable per company
  * Stored in the database like all other templates (#811)
* Parts searches can be restricted by type (part, service, ...)
* SysV init script template for RedHat/CentOS (#2900)
* New configuration keys in '[mail]' section of ledgersmb.conf (#4378)
* Beginnings of a web services API, served at /erp/api/v0 (#4452)

Changed functionalities
* Faster loading of the menu
* Faster loading of selected accounts in the GL accounts drop-down
* Faster loading of the goods number and description drop-downs
* All payments recorded in the database as primary data (no longer inferred)
* New UI for uploading and editing document (print) templates
* Colors of default scheme changed to follow the soft-tone of the Claro theme
* Manual tax lines with 0 (zero) tax and taxable amounts are no longer posted
* Employee 'Wages & Deductions' (experimental) page now hidden until enabled
* Templates for printed documents need to escape inserted data (was automatic)
* Search checkmarks 'Open/Closed' replaced by radio button 'Open/Closed/All'
* Default exchange rates cannot be NULL
* Don't display delete button for in-use currency or exchange rate types
* Removed cash/check/deposit dropdown POS remnant from single payment screen

Bugs fixed
* Default dates sometimes off by a day (before or after the current day) (#2587)
* Customers and vendors in parts screen selectable through drop-downs
* Overpayments not shown in Cash > Reports > Receipts (#3577)
* Handling of currencies with short codes or unusual characters (#4435, #4436)
* Formatting of columns in the 'Inventory Activity' report
* Incorrect calculation of discounts where posting date isn't 'today' (#4505)

Code cleanup
* Reduce use of LedgerSMB::App_State and LedgerSMB::App_State::Locale
* Replace unnecessary UNION selects on ar/ap/gl by select on transactions
* Remove legacy infrastructure to generate table-formatted report output